Revert "try fixed img no display"
This reverts commit ad3149a993a052825bca2aea074139dc50e3b48d.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "previewServer.port": 56202
+    "previewServer.port": 52084,
+    "liveSassCompile.settings.formats": [
+        {
+            "format": "compressed",
+            // 轉譯成什麼檔案
+            "extensionName": ".min.css",
+            // 轉譯後的路徑
+            "savePath": "/CSS/"
+        }
+    ]
 }
